; ModuleID = '/home/carl/AnghaBench/git/extr_setup.c_verify_non_filename.c'
source_filename = "/home/carl/AnghaBench/git/extr_setup.c_verify_non_filename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [153 x i8] c"ambiguous argument '%s': both revision and filename\0AUse '--' to separate paths from revisions, like this:\0A'git <command> [<revision>...] -- [<file>...]'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @verify_non_filename(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = call i32 (...) @is_inside_work_tree()
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = call i64 (...) @is_inside_git_dir()
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %7, %2
  br label %27

11:                                               ; preds = %7
  %12 = load i8*, i8** %4, align 8
  %13 = load i8, i8* %12, align 1
  %14 = sext i8 %13 to i32
  %15 = icmp eq i32 %14, 45
  br i1 %15, label %16, label %17

16:                                               ; preds = %11
  br label %27

17:                                               ; preds = %11
  %18 = load i8*, i8** %3, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @check_filename(i8* %18, i8* %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %17
  br label %27

23:                                               ; preds = %17
  %24 = call i32 @_(i8* getelementptr inbounds ([153 x i8], [153 x i8]* @.str, i64 0, i64 0))
  %25 = load i8*, i8** %4, align 8
  %26 = call i32 @die(i32 %24, i8* %25)
  br label %27

27:                                               ; preds = %23, %22, %16, %10
  ret void
}

declare dso_local i32 @is_inside_work_tree(...) #1

declare dso_local i64 @is_inside_git_dir(...) #1

declare dso_local i32 @check_filename(i8*, i8*) #1

declare dso_local i32 @die(i32, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
